fixes menu alignment

--- a/sass/modules/_menu.sass
+++ b/sass/modules/_menu.sass
@@ -22,9 +22,10 @@
     display: block
     padding: 0
     ul
+        float: right
         li
             display: inline-block
-            float: right
+            float: left
             padding: 20px 30px 20px 0
             a
                 display: block
